--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         
         <div class="footer">
-            2022, Made with <i class="fa-solid fa-heart"></i> by  <a class="link" href="https://github.com/quwanishbakirov" target="_blank"> Bakirov</a>
+            2022, Made with <i class="fa-solid fa-heart"></i> by  <a class="link" href="https://github.com/quwanishbakirov/tictactoe" target="_blank"> Bakirov</a>
         </div>
     </div>
 </body>
